SER-26 Enable link attachments w/ metadata
